# Marble

./: README.md  marble.sql
marble-back/: .env  Cargo.toml  README.md
marble-back/src/: config.rs  jwt.rs  main.rs
marble-back/src/database/: dao.rs  mod.rs
marble-back/src/handlers/: mod.rs  pages.rs  posts.rs  users.rs
marble-front/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
marble-front/src/: App.vue  main.ts
marble-front/src/assets/: style.css  variable.css
marble-front/src/components/: Footer.vue  Navigator.vue  Page.vue
marble-front/src/components/MainBody/: About.vue  Friends.vue  Home.vue  Post.vue  PostList.vue  Publish.vue
marble-front/src/lib/: api.ts  bus.ts  color.ts  md-editor.ts  pagename.ts  routes.ts  types.ts
marble-front/src/lib/services/: pages.ts  posts.ts  users.ts
