[package]
name = "marble-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "time"] }
dotenvy = "0.15"
config = "0.13"
anyhow = "1"
time = "0.3"
local-ip-address = "0.4"
